--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -6,7 +6,7 @@
   },
   "Hero": {
     "title": "Привет — я Frontend-разработчик",
-    "description": "Создаю интерфейсы с фокусом на производительность и удобство. Next.js + TypeScript + Tailwind.",
+    "description": "Создаю интерфейсы с фокусом на производительность и удобство.",
     "cta": "Мои проекты"
   },
   "About": {
@@ -58,8 +58,11 @@
     "emailPlaceholder": "Email",
     "messagePlaceholder": "Сообщение",
     "submit": "Отправить",
+    "sending": "Отправка...",
     "success": "Отправлено!",
-    "error": "Заполните все поля."
+    "error": "Не удалось отправить. Проверьте поля и попробуйте снова.",
+    "rateLimited": "Слишком много запросов. Попробуйте чуть позже.",
+    "botDetected": "Подозрительная активность обнаружена. Попробуйте еще раз позже."
   },
   "Footer": {
     "builtWith": "создано на Next.js",
