--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -60,7 +60,9 @@
     "submit": "Отправить",
     "sending": "Отправка...",
     "success": "Отправлено!",
-    "error": "Не удалось отправить. Проверьте поля и попробуйте снова.",
+    "invalid": "Проверьте корректность полей и попробуйте снова.",
+    "error": "Не удалось отправить сообщение. Попробуйте позже.",
+    "configError": "Форма пока не настроена. Добавьте EmailJS ключи в .env.local и перезапустите приложение.",
     "rateLimited": "Слишком много запросов. Попробуйте чуть позже.",
     "botDetected": "Подозрительная активность обнаружена. Попробуйте еще раз позже."
   },
