--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -7,7 +7,8 @@
   "Hero": {
     "title": "Привет — я Fullstack JavaScript-разработчик",
     "description": "Создаю интерфейсы с фокусом на производительность и удобство.",
-    "cta": "Мои проекты"
+    "cta": "Мои проекты",
+    "resume": "Скачать резюме"
   },
   "About": {
     "title": "О себе",
